# rfp_rag_assistant

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
config/: app.toml
docs/: source_information_summary.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
src/rfp_rag_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api_app.py  test_api_routes.py  test_azure_openai_embedder.py  test_background_preview_pipeline.py  test_background_requirements_chunker.py  test_background_requirements_parser.py  test_blob_document_loader.py  test_blob_service.py  test_chroma_indexer.py  test_chroma_schema.py  test_cli_config.py  test_cli_ingestion.py  test_config_wrapper.py  test_external_reference_chunker.py  test_external_reference_loader.py  test_html_reference_parser.py  test_ingestion_service.py  test_itt_combined_qa_chunker.py  test_itt_combined_qa_parser.py  test_local_document_loader.py  test_main.py  test_models.py  test_narrative_combined_qa_parser.py  test_pdf_section_parser.py  test_pipeline.py  test_reconciliation_service.py  test_response_supporting_material_chunker.py  test_response_supporting_material_excel_parser.py  test_response_supporting_material_excel_parser_hardening.py  test_response_supporting_material_parser.py  test_services.py  test_settings.py  test_supporting_material_preview_pipeline.py  test_tender_details_chunker.py  test_tender_details_parser.py  test_tender_details_preview_pipeline.py  test_title_normalization.py
(+64 files in other folders)
