[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rfp-rag-assistant"
version = "0.1.0"
description = "RAG-based assistant for RFP ingestion, retrieval, and grounded drafting."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Proprietary" }
authors = [
  { name = "Frank Bogle" }
]
dependencies = [
  "azure-storage-blob>=12.25,<13",
  "openpyxl>=3.1,<4",
  "pypdf>=6.9,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
rfp-rag = "rfp_rag_assistant.app.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
